--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,6 +21,7 @@
             android:exported="false"
             android:label="@string/title_activity_settings" />
         <activity
+            android:excludeFromRecents="true"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
