--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
             android:name=".SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings" />
+<!--        android:excludeFromRecents="true"-->
         <activity
-            android:excludeFromRecents="true"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
